--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "cors": "^2.8.5",
+    "email-templates": "^2.7.1",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
+    "fs-extra": "^9.0.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^4.7.0",
+    "puppeteer": "^3.3.0"
   }
 }
